--- a/src/main/java/com/gmail/socraticphoenix/clack/app/gui/ClackUI.form
+++ b/src/main/java/com/gmail/socraticphoenix/clack/app/gui/ClackUI.form
@@ -18,31 +18,20 @@
         <children>
           <scrollpane id="50a51">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
               <component id="323d4" class="javax.swing.JTextArea" binding="program">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <font/>
+                </properties>
               </component>
             </children>
           </scrollpane>
-          <scrollpane id="d0cf9">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="eea54" class="javax.swing.JTextArea" binding="debug">
-                <constraints/>
-                <properties/>
-              </component>
-            </children>
-          </scrollpane>
-          <grid id="e7d39" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e7d39" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -56,14 +45,6 @@
                 </constraints>
                 <properties>
                   <text value="Program"/>
-                </properties>
-              </component>
-              <component id="86ac5" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Debug"/>
                 </properties>
               </component>
             </children>
@@ -86,7 +67,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="3aafc" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="3aafc" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -112,26 +93,18 @@
                   </component>
                   <component id="1ac1" class="javax.swing.JButton" binding="forceStopButton" default-binding="true">
                     <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Force Stop"/>
                     </properties>
                   </component>
-                  <component id="68334" class="javax.swing.JButton" binding="debugButton" default-binding="true">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Debug"/>
-                    </properties>
-                  </component>
-                  <component id="f86ee" class="javax.swing.JButton" binding="stepDebuggerButton" default-binding="true">
+                  <component id="3ccdb" class="javax.swing.JButton" binding="byteCountButton" default-binding="true">
                     <constraints>
                       <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Step Debugger"/>
+                      <text value="Byte Count"/>
                     </properties>
                   </component>
                 </children>
@@ -162,18 +135,10 @@
                   </component>
                   <component id="9360b" class="javax.swing.JButton" binding="saveButton" default-binding="true">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Save"/>
-                    </properties>
-                  </component>
-                  <component id="3ccdb" class="javax.swing.JButton" binding="byteCountButton" default-binding="true">
-                    <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Byte Count"/>
                     </properties>
                   </component>
                   <component id="a8bd" class="javax.swing.JButton" binding="toggleKeyboardButton" default-binding="true">
@@ -277,7 +242,10 @@
               <component id="c11e9" class="javax.swing.JTextArea" binding="out">
                 <constraints/>
                 <properties>
+                  <editable value="false"/>
+                  <lineWrap value="true"/>
                   <text value=""/>
+                  <wrapStyleWord value="true"/>
                 </properties>
               </component>
             </children>
@@ -291,7 +259,11 @@
             <children>
               <component id="6fdf9" class="javax.swing.JTextArea" binding="error">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <editable value="false"/>
+                  <lineWrap value="true"/>
+                  <wrapStyleWord value="true"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
